# parametricCutGeneration

./: .gitignore  README.rst  pyproject.toml  run_cluster_experiments.sh  setup.py  tox.ini
src/: __init__.py
src/Experiments/: .run_cluster_experiments.sh.swp
src/Experiments/Test/: data_collection_generation_test.py  node_lp_1.lp
src/Experiments/Test/DataCollectionTest/: OptimalCutData_random_mip_1_MIP_base_13.lp  OptimalCutData_random_mip_1_MIP_base_28.lp  OptimalCutData_random_mip_1_MIP_base_7.lp  OptimalCutData_random_mip_1_cut_number_0.lp  temp.lp  (+35 more)
src/Experiments/paramFiles/: SciPy_experimental_settings.toml  experimental_parameters.toml  scip_disable_other_cuts.set  scip_experimental_settings.set  scip_experimental_settings.toml  scip_experimental_settings_all.set  scip_parameters_original.set
src/Experiments/source/: .run_cluster_experiments.sh.swp  Apptainer.def  cluster_enviroment.sh  experiments.py  process_data.py  process_raw_data.py  process_trial_raw_data.sh  run_cluster_experiments.sh  run_trial.py  scip_data_collection_events.py  setup_experiments.py  setup_experiments.sh
src/parametricCutGen/: __init__.py  cluster_utils.py  cut_generation_problem.py  cut_score.py  cut_selection_problem.py  execptions.py  generic_solvers.py  logging_utils.py  optimal_cut_generation.py  scip_data_collection_events.py
src/parametricCutGen.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/parametricCutGen/Experiments/: #run_cluster_experiments.sh#  cluster_enviroment.sh  experiments.py  run_cluster_experiments.sh  run_experiment.sh
(+26 files in other folders)
